--- a/WebDev2020/WebDev2020.csproj
+++ b/WebDev2020/WebDev2020.csproj
@@ -209,6 +209,7 @@
     <Content Include="Scripts\blog.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Properties\PublishProfiles\IISProfile.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\header.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
